--- a/spec/javascripts/support/jasmine.yml
+++ b/spec/javascripts/support/jasmine.yml
@@ -11,11 +11,7 @@
 #   - dist/**/*.js
 #
 src_files:
-  - "app/**/*.js"
-  - "app/**/*.js.coffee"
-  - "app/**/*.coffee"
-  - "app/assets/javascripts/mixingpanel/properties.js.coffee"
-  - spec/javascripts/generated/assets/**/*.js
+  - "**/*.js"
 
 # stylesheets
 #
@@ -41,10 +37,7 @@ stylesheets:
 #   - helpers/**/*.js
 #
 helpers:
-  - "spec.js.coffee"
   - "helpers/**/*.js"
-  - "helpers/**/*.coffee"
-  - "helpers/**/*.js.coffee"
 
 # spec_files
 #
@@ -57,9 +50,7 @@ helpers:
 #   - **/*[sS]pec.js
 #
 spec_files:
-  - "**/*[Ss]pec.js"
-  - "**/*[Ss]pec.coffee"
-  - "**/*[Ss]pec.js.coffee"
+  - "**/*[sS]pec.js"
 
 # src_dir
 #
@@ -70,7 +61,7 @@ spec_files:
 #
 # src_dir: public
 #
-src_dir:
+src_dir: tmp/assets
 
 # spec_dir
 #
@@ -81,4 +72,4 @@ src_dir:
 #
 # spec_dir: spec/javascripts
 #
-spec_dir:
+spec_dir: tmp/specs
